# intel-quick-assist

./: README.md  enable_vfio.sh  install-vf.sh  install.sh  install_standalone.sh  passthrough.sh  qat_vm.xml.template  telemetry
checkbox/: run.sh
checkbox/checkbox-provider-qat/: manage.py
checkbox/checkbox-provider-qat/units/: category.pxu  jobs.pxu  manifest.pxu  resource.pxu  test-plan.pxu
checkbox/checkbox-provider-qat/units/common/: category.pxu  jobs.pxu
checkbox/checkbox-provider-qat/units/qatlib/: category.pxu  jobs.pxu
checkbox/lib/qat-tools/: pyproject.toml
checkbox/lib/qat-tools/src/: qatctl.py  qatlib.py  qatop.py
checkbox/lib/qat_tools-1.0.0/: README.md  pyproject.toml  setup.py
checkbox/lib/qat_tools-1.0.0/src/qat_tools/: qatctl.py  qatlib.py  qatop.py  util.py
checkbox/snap/: snapcraft.yaml
checkbox/snap/hooks/: configure  install  install-deps  remove  remove-deps
guest-tools/: setup-qat-guest.sh
guest-tools/image/: create-qat-image.sh  setup.sh
guest-tools/image/cloud-init-data/: meta-data.template  user-data.template
snap/: README.md  snapcraft.yaml
